--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.5.2
 Django==4.1.1
+django-admin-honeypot==1.1.0
 django-admin-thumbnails==0.2.6
+django-session-timeout==0.1.0
 Pillow==9.2.0
 python-decouple==3.6
 six==1.16.0
